implementacion cambios en middleware